[gd_scene load_steps=8 format=3 uid="uid://qn7fv84ag5v0"]

[ext_resource type="Texture2D" uid="uid://b8domncyqph8y" path="res://assets/images/rope/ropeSegment.png" id="1_763jl"]
[ext_resource type="Script" uid="uid://d38sc03yc1a8x" path="res://scripts/rope/rope_segment.gd" id="1_p15dj"]
[ext_resource type="Texture2D" uid="uid://c26m16o43r42b" path="res://assets/images/lock_open.png" id="3_vm2fs"]
[ext_resource type="Script" path="res://scripts/rope/lock_icon.gd" id="4_d8spu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d8spu"]
radius = 2.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_763jl"]
radius = 2.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mwb40"]
radius = 2.0
height = 34.0

[node name="RopeSegment" type="RigidBody2D"]
rotation = 1.5708
gravity_scale = 0.0
linear_damp = 2.0
angular_damp = 8.0
script = ExtResource("1_p15dj")

[node name="Area2D" type="Area2D" parent="."]

[node name="JointCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.61999e-06, -1)
shape = SubResource("CapsuleShape2D_d8spu")

[node name="Icon" type="Sprite2D" parent="Area2D"]
position = Vector2(2.63151e-07, -0.0726938)
rotation = 1.5708
scale = Vector2(0.0218842, 0.031)
texture = ExtResource("1_763jl")

[node name="CrossCollisionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrossCollisionArea2D"]
shape = SubResource("CapsuleShape2D_763jl")
debug_color = Color(0.920915, 5.92971e-05, 0.693135, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mwb40")

[node name="LockIcon" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(-23, 8.32598e-05)
rotation = -1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_vm2fs")
script = ExtResource("4_d8spu")

[connection signal="body_shape_entered" from="CrossCollisionArea2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="CrossCollisionArea2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="mouse_entered" from="CrossCollisionArea2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CrossCollisionArea2D" to="." method="_on_area_2d_mouse_exited"]
